# LearnCmake

./: CMakeLists.txt  README.md
cmake-dll/: readme.md
cmake-dll/cmake-dll-dynamic/: CMakeLists.txt  run_dll.cpp
cmake-dll/cmake-dll-dynamic/lib/: CMakeLists.txt  my_dll.cpp  my_dll.h
cmake-dll/cmake-dll-static/: CMakeLists.txt  run_dll.cpp
cmake-dll/cmake-dll-static/lib/: CMakeLists.txt  my_dll.cpp  my_dll.h
cmake-dll/cmake-opencv-dll/: CmakeLists.txt  test.cpp
cmake-dll/cmake-opencv-dll/show_img/: CmakeLists.txt  show_img.cpp  show_img.h
cmake-opencv/: CMakeLists.txt  DisplayImage.cpp  readme.md
cmake-pcl/: CMakeLists.txt  pcl_visualizer_demo.cpp  readme.md
cmake-qt/: mainwindow.ui  readme.md
